# Sistema_Gestao_de_Incendios

./: .gitignore  CMakeLists.txt  README.md
src/: bombeiros.c  bombeiros.h  equipamentos.c  equipamentos.h  intervencoes.c  intervencoes.h  logs.c  logs.h  main.c  menu.c  menu.h  modelos.h  ocorrencias.c  ocorrencias.h  persistencia.c  persistencia.h  relatorios.c  relatorios.h  sgi.h  sugestoes.c  sugestoes.h  tipos_comuns.h  utils.c  utils.h
